	* apps/Makefile, Kconfig, */Kconfig, tools/mkkconfig.sh: Add the tool
	  mkkconfig.sh that dynamically builds the apps/Kconfig file at
	  configuration time.  The hardcoded configuration file has been removed
	  and now the top-level Makefile executes tools/mkkconfig.sh to auto-
	  generate the top-level Kconfig file.  A new apps/ make target call
	  preconfig: was added to support this operation.  Now you do not have
	  to modify the top-level Kconfig file to add a new directory into the
	  configuration; the top-level subdirectory simply needs to include a
	  Kconfig file and it will automatically be included in the
	  configuration.  The native Windows build is temporarily broken until
	  a new apps/tools/mkconfig.bat script is generated (2015-08-11).
	* apps/tools/mkkconfig.bat:  Add the Windows script corresponding to
	  apps/tools/mkkconfig.sh.  Needed for a Windows native build.  Untested
	  on initial commit (2015-08-12).

7.12 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/can:  Extend the CAN loopback test by adding more
	  command line options (2015-08-17).
	* apps/examples/usbserial: Can now be run as an NSH builtin-function.
	  Now uses a configurable IO buffer size (2015-08-20).
	* Various Kconfig files in netutils:  Fix some changes from from
	  NETUTILS_DNSCLIENT to NETDB_DNSCLIENT.  From Pavel Pisa (2015-08-20).
	* system/netdb:  Failed to build if CONFIG_NET_HOSTFILE was not defined
	  because gethostbyaddr() was not available.  Noted by OrbitalFox
	  (2015-08-21).
	* apps/system/symtab: Optional canned symtab inclusion to the build. When
	  option CONFIG_SYSTEM_SYMTAB is selected and symbol table file
	  libc/symtab/canned_symtab.inc is prepared then application can
	  use system provided complete symbol table. The option has
	  substantial effect on system image size. Mainly code/text. If
	  loading of applications at runtime is not planned do not select
	  this.  From Pavel Pisa (2015-08-23).
